--- a/interactive-story/package.json
+++ b/interactive-story/package.json
@@ -1,6 +1,6 @@
 {
   "name": "interactive-story",
-  "homepage": "http://stacylayton.github.io/myapp",
+  "homepage": "https://stacylayton.github.io/myapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
